@@ -2,6 +2,16 @@
 
         Unreviewed, build fix.
 
+        Fix breakage of Chromium Mac DRT port caused by r67905.
+
+        https://bugs.webkit.org/show_bug.cgi?id=46230
+
+        * Scripts/webkitpy/layout_tests/port/webkit.py:
+
+2010-09-21  Dirk Pranke  <dpranke@chromium.org>
+
+        Unreviewed, build fix.
+
         Add missing import of 'tempfile'.
 
         * Scripts/webkitpy/layout_tests/port/chromium.py:
